# create-smithy-app

./: .gitignore  README.md  package.json
.bin/: create-smithy-app.js
template/: .gitignore  Cargo.toml  package.json  rustfmt.toml
template/scripts/: serve-prod.py  upload.sh
template/src/: lib.rs
template/static/: index.html
template/tests/: app.rs
